--- a/index.html
+++ b/index.html
@@ -206,7 +206,62 @@
     }
 
     /* Hide "fixed" position elements generally? Danger zone. */
-    /* *[style*="fixed"] { position: absolute !important; } */
+    /* Sticky action button styles */
+    .sticky-footer-wrap {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+      padding: 15px 20px;
+      z-index: 9999;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .sticky-action-btn {
+      display: inline-block;
+      width: 100%;
+      max-width: 400px;
+      background-color: #ff3333;
+      color: #ffffff !important;
+      text-align: center;
+      padding: 16px 20px;
+      font-size: 20px;
+      font-weight: 800;
+      border-radius: 12px;
+      text-decoration: none;
+      text-transform: uppercase;
+      box-shadow: 0 4px 15px rgba(255, 51, 51, 0.4);
+      animation: pulse 2s infinite;
+      transition: all 0.2s ease-in-out;
+    }
+
+    .sticky-action-btn:hover {
+      background-color: #e60000;
+      transform: translateY(-2px);
+    }
+
+    @keyframes pulse {
+      0% {
+        box-shadow: 0 0 0 0 rgba(255, 51, 51, 0.7);
+      }
+
+      70% {
+        box-shadow: 0 0 0 10px rgba(255, 51, 51, 0);
+      }
+
+      100% {
+        box-shadow: 0 0 0 0 rgba(255, 51, 51, 0);
+      }
+    }
+
+    body {
+      padding-bottom: 90px !important;
+    }
   </style>
 </head>
 
@@ -945,6 +1000,9 @@
 
 
 
+  <div class="sticky-footer-wrap">
+    <a href="https://vk.com/app6013442_-223161346?form_id=5#form_id=5" class="sticky-action-btn">Получить по акции</a>
+  </div>
 </body>
 
 </html>
