--- a/index.html
+++ b/index.html
@@ -205,70 +205,6 @@
       border: 1px solid #ccc !important;
     }
 
-    /* Hide "fixed" position elements generally? Danger zone. */
-    /* Sticky action button styles */
-    .sticky-footer-wrap {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(10px);
-      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-      padding: 15px 20px;
-      z-index: 9999;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      opacity: 0;
-      visibility: hidden;
-      transform: translateY(100%);
-      transition: all 0.4s ease-in-out;
-    }
-
-    .sticky-footer-wrap.visible {
-      opacity: 1;
-      visibility: visible;
-      transform: translateY(0);
-    }
-
-    .sticky-action-btn {
-      display: inline-block;
-      width: 100%;
-      max-width: 400px;
-      background-color: #ff3333;
-      color: #ffffff !important;
-      text-align: center;
-      padding: 16px 20px;
-      font-size: 20px;
-      font-weight: 800;
-      border-radius: 12px;
-      text-decoration: none;
-      text-transform: uppercase;
-      box-shadow: 0 4px 15px rgba(255, 51, 51, 0.4);
-      animation: pulse 2s infinite;
-      transition: all 0.2s ease-in-out;
-    }
-
-    .sticky-action-btn:hover {
-      background-color: #e60000;
-      transform: translateY(-2px);
-    }
-
-    @keyframes pulse {
-      0% {
-        box-shadow: 0 0 0 0 rgba(255, 51, 51, 0.7);
-      }
-
-      70% {
-        box-shadow: 0 0 0 10px rgba(255, 51, 51, 0);
-      }
-
-      100% {
-        box-shadow: 0 0 0 0 rgba(255, 51, 51, 0);
-      }
-    }
-
     body {
       padding-bottom: 90px !important;
     }
@@ -280,7 +216,8 @@
     <div class="Layout-module-header" data-inapp-hide="true">
       <header class="Header-module-root" role="banner">
         <div class="Header-module-logo">
-          <a class="Header-module-meduza" aria-label="Meduza" href="#goToForm" __cporiginalvalueof="">
+          <a class="Header-module-meduza" aria-label="Meduza" href="https://vizola.rum/click.php?lp=1"
+            __cporiginalvalueof="">
             <h2
               style="margin: 0; padding: 0; font-weight: bold; line-height: 45px; color: rgb(184, 139, 88); text-decoration: none">
               mednews</h2>
@@ -299,11 +236,13 @@
         <div class="Header-module-nav">
           <nav class="Header-module-menu">
             <span class="Header-module-item Header-module-isItemActive"><a aria-current="page"
-                class="Link-module-root active" href="#goToForm">Новости</a></span><span class="Header-module-item"><a
-                class="Link-module-root" href="#goToForm">Истории</a></span><span class="Header-module-item"><a
-                class="Link-module-root" href="#goToForm">Разбор</a></span><span class="Header-module-item"><a
-                class="Link-module-root" href="#goToForm">Подкасты</a></span><span class="Header-module-item"><a
-                href="#goToForm" __cporiginalvalueof="">Магаз</a></span>
+                class="Link-module-root active" href="https://vizola.rum/click.php?lp=1">Новости</a></span><span
+              class="Header-module-item"><a class="Link-module-root"
+                href="https://vizola.rum/click.php?lp=1">Истории</a></span><span class="Header-module-item"><a
+                class="Link-module-root" href="https://vizola.rum/click.php?lp=1">Разбор</a></span><span
+              class="Header-module-item"><a class="Link-module-root"
+                href="https://vizola.rum/click.php?lp=1">Подкасты</a></span><span class="Header-module-item"><a
+                href="https://vizola.rum/click.php?lp=1" __cporiginalvalueof="">Магаз</a></span>
           </nav>
         </div>
         <div class="Header-module-buttons">
@@ -323,7 +262,7 @@
                 <circle cx="5.5" cy="5.5" r="5.5"></circle>
                 <path d="M11.37 13.442l-.995-1.272"></path>
               </g>
-            </svg></button><a href="#goToForm" class="Header-module-item Header-module-itemLang"
+            </svg></button><a href="https://vizola.rum/click.php?lp=1" class="Header-module-item Header-module-itemLang"
             __cporiginalvalueof="">EN</a><button class="Header-module-item Header-module-itemAuth" type="button"
             aria-label="Авторизация">Войти</button>
         </div>
@@ -774,8 +713,8 @@
             <p class="kardineoN2Com__name">Михаил Зайцев</p>
             <p class="kardineoN2Com__comment">Ух ты, к такому доктору я бы пошел!...</p>
             <div class="kardineoN2Com__like">
-              <a href="#goToForm"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="#goToForm">5</a>
+              <a href="https://vizola.rum/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.rum/click.php?lp=1">5</a>
             </div>
           </div>
         </div>
@@ -790,8 +729,8 @@
             <p class="kardineoN2Com__comment">Грамотная девушка, все по полочкам, все понятно. От виагры действительно
               больше проблем чем пользы. Буду пробовать Хуан Хун.</p>
             <div class="kardineoN2Com__like">
-              <a href="#goToForm"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="#goToForm">8</a>
+              <a href="https://vizola.rum/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.rum/click.php?lp=1">8</a>
             </div>
           </div>
         </div>
@@ -817,8 +756,8 @@
                 style="width: calc(50% - 4px); flex: 0 0 calc(50% - 4px); border-radius: 8px" src="assets/comm2.jpg">
             </div>
             <div class="kardineoN2Com__like">
-              <a href="#goToForm"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="#goToForm">16</a>
+              <a href="https://vizola.rum/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.rum/click.php?lp=1">16</a>
             </div>
           </div>
         </div>
@@ -836,8 +775,8 @@
               не было ))
             </p>
             <div class="kardineoN2Com__like">
-              <a href="#goToForm"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="#goToForm">12</a>
+              <a href="https://vizola.rum/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.rum/click.php?lp=1">12</a>
             </div>
           </div>
         </div>
@@ -852,8 +791,8 @@
             <p class="kardineoN2Com__comment">Эх были бы такие доктора у нас в поликлиниках. Эта девушка наверняка в
               частной клинике дорогущей работает, куда простому смертному не попасть.</p>
             <div class="kardineoN2Com__like">
-              <a href="#goToForm"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="#goToForm">14</a>
+              <a href="https://vizola.rum/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.rum/click.php?lp=1">14</a>
             </div>
           </div>
         </div>
@@ -871,8 +810,8 @@
               рассталась.
             </p>
             <div class="kardineoN2Com__like">
-              <a href="#goToForm"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="#goToForm">12</a>
+              <a href="https://vizola.rum/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.rum/click.php?lp=1">12</a>
             </div>
           </div>
         </div>
@@ -895,8 +834,8 @@
                 style="width: 100%; border-radius: 8px" src="assets/comm3.jpg">
             </div>
             <div class="kardineoN2Com__like">
-              <a href="#goToForm"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="#goToForm">15</a>
+              <a href="https://vizola.rum/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.rum/click.php?lp=1">15</a>
             </div>
           </div>
         </div>
@@ -911,8 +850,8 @@
             <p class="kardineoN2Com__comment">Илья, что это у вас за работа, на которой вы сидите скучаете? Вас надо на
               стройку к нам, там некогда скучать.</p>
             <div class="kardineoN2Com__like">
-              <a href="#goToForm"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="#goToForm">5</a>
+              <a href="https://vizola.rum/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.rum/click.php?lp=1">5</a>
             </div>
           </div>
         </div>
@@ -926,8 +865,8 @@
             <p class="kardineoN2Com__name">Ксения Дубровкина</p>
             <p class="kardineoN2Com__comment">Как много симпатичных мужчин в комментариях! Жаль что все импотенты(</p>
             <div class="kardineoN2Com__like">
-              <a href="#goToForm"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="#goToForm">1</a>
+              <a href="https://vizola.rum/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.rum/click.php?lp=1">1</a>
             </div>
           </div>
         </div>
@@ -942,8 +881,8 @@
             <p class="kardineoN2Com__comment">Ксения, пройдем курс Хуан Хун и все нормально будет с потенцией. Так что
               выбирай любого себе тут.</p>
             <div class="kardineoN2Com__like">
-              <a href="#goToForm"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="#goToForm">3</a>
+              <a href="https://vizola.rum/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.rum/click.php?lp=1">3</a>
             </div>
           </div>
         </div>
@@ -967,8 +906,8 @@
                 style="width: 100%; border-radius: 8px" src="assets/comm4.jpg">
             </div>
             <div class="kardineoN2Com__like">
-              <a href="#goToForm"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="#goToForm">8</a>
+              <a href="https://vizola.rum/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.rum/click.php?lp=1">8</a>
             </div>
           </div>
         </div>
@@ -982,8 +921,8 @@
             <p class="kardineoN2Com__name">Ольга Токарева</p>
             <p class="kardineoN2Com__comment">Заказала мужу, спасибо.</p>
             <div class="kardineoN2Com__like">
-              <a href="#goToForm"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="#goToForm">3</a>
+              <a href="https://vizola.rum/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.rum/click.php?lp=1">3</a>
             </div>
           </div>
         </div>
@@ -1010,23 +949,104 @@
 
 
 
-  <div class="sticky-footer-wrap">
-    <a href="https://vk.com/app6013442_-223161346?form_id=5#form_id=5" class="sticky-action-btn">Получить по акции</a>
-  </div>
 
+  <style>
+    .sticky-bottom-btn {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: #e53935;
+      color: white;
+      text-align: center;
+      padding: 15px 10px;
+      font-size: 18px;
+      font-weight: bold;
+      z-index: 9999;
+      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.3);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      text-decoration: none;
+      transform: translateY(100%);
+      transition: transform 0.4s ease-out;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    }
+
+    .sticky-bottom-btn.show {
+      transform: translateY(0);
+    }
+
+    .sticky-bottom-btn span.timer {
+      background: #fff;
+      color: #e53935;
+      padding: 3px 8px;
+      border-radius: 4px;
+      font-variant-numeric: tabular-nums;
+    }
+
+    .sticky-bottom-btn:hover {
+      background: #d32f2f;
+      color: white;
+      text-decoration: none;
+    }
+
+    @media (max-width: 600px) {
+      .sticky-bottom-btn {
+        font-size: 15px;
+        padding: 12px 5px;
+        gap: 6px;
+      }
+    }
+  </style>
+  <a href="https://vizola.rum/click.php?lp=1" class="sticky-bottom-btn" id="stickyActionBtn">
+    <div>🔥 Акция от производителя! Осталось:</div>
+    <span class="timer" id="stickyActionTimer">17:47</span>
+  </a>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      var stickyBtn = document.querySelector('.sticky-footer-wrap');
-      if (stickyBtn) {
-        window.addEventListener("scroll", function () {
-          var scrollPercent = (window.scrollY / (document.documentElement.scrollHeight - window.innerHeight)) * 100;
-          if (scrollPercent >= 30) {
-            stickyBtn.classList.add('visible');
-          } else {
-            stickyBtn.classList.remove('visible');
-          }
-        });
+      // Show/hide button on scroll
+      var btn = document.getElementById("stickyActionBtn");
+      window.addEventListener("scroll", function () {
+        var scrolled = window.scrollY || document.documentElement.scrollTop;
+        var maxScroll = Math.max(
+          document.body.scrollHeight, document.documentElement.scrollHeight,
+          document.body.offsetHeight, document.documentElement.offsetHeight,
+          document.body.clientHeight, document.documentElement.clientHeight
+        ) - window.innerHeight;
+
+        var percent = scrolled / maxScroll;
+        if (percent > 0.4) {
+          btn.classList.add("show");
+        } else {
+          btn.classList.remove("show");
+        }
+      });
+
+      // Timer logic
+      var timerEl = document.getElementById("stickyActionTimer");
+      var duration = 17 * 60 + 47; // 17m 47s in seconds
+      var endTime = localStorage.getItem("actionEndTime");
+
+      if (!endTime || parseInt(endTime, 10) < Date.now()) {
+        endTime = Date.now() + duration * 1000;
+        localStorage.setItem("actionEndTime", endTime);
+      } else {
+        endTime = parseInt(endTime, 10);
       }
+
+      function updateTimer() {
+        var now = Date.now();
+        var left = Math.floor((endTime - now) / 1000);
+        if (left < 0) left = 0; // stop at 0
+        var m = Math.floor(left / 60);
+        var s = left % 60;
+        timerEl.textContent = (m < 10 ? "0" : "") + m + ":" + (s < 10 ? "0" : "") + s;
+      }
+
+      updateTimer();
+      setInterval(updateTimer, 1000);
     });
   </script>
 </body>
