--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <div class="Layout-module-header" data-inapp-hide="true">
       <header class="Header-module-root" role="banner">
         <div class="Header-module-logo">
-          <a class="Header-module-meduza" aria-label="Meduza" href="https://vizola.ru/click.php?lp=1"
+          <a class="Header-module-meduza" aria-label="Meduza" href="https://vizola.ru/click?lp=1"
             __cporiginalvalueof="">
             <h2
               style="margin: 0; padding: 0; font-weight: bold; line-height: 45px; color: rgb(184, 139, 88); text-decoration: none">
@@ -236,13 +236,13 @@
         <div class="Header-module-nav">
           <nav class="Header-module-menu">
             <span class="Header-module-item Header-module-isItemActive"><a aria-current="page"
-                class="Link-module-root active" href="https://vizola.ru/click.php?lp=1">Новости</a></span><span
+                class="Link-module-root active" href="https://vizola.ru/click?lp=1">Новости</a></span><span
               class="Header-module-item"><a class="Link-module-root"
-                href="https://vizola.ru/click.php?lp=1">Истории</a></span><span class="Header-module-item"><a
-                class="Link-module-root" href="https://vizola.ru/click.php?lp=1">Разбор</a></span><span
+                href="https://vizola.ru/click?lp=1">Истории</a></span><span class="Header-module-item"><a
+                class="Link-module-root" href="https://vizola.ru/click?lp=1">Разбор</a></span><span
               class="Header-module-item"><a class="Link-module-root"
-                href="https://vizola.ru/click.php?lp=1">Подкасты</a></span><span class="Header-module-item"><a
-                href="https://vizola.ru/click.php?lp=1" __cporiginalvalueof="">Магаз</a></span>
+                href="https://vizola.ru/click?lp=1">Подкасты</a></span><span class="Header-module-item"><a
+                href="https://vizola.ru/click?lp=1" __cporiginalvalueof="">Магаз</a></span>
           </nav>
         </div>
         <div class="Header-module-buttons">
@@ -262,7 +262,7 @@
                 <circle cx="5.5" cy="5.5" r="5.5"></circle>
                 <path d="M11.37 13.442l-.995-1.272"></path>
               </g>
-            </svg></button><a href="https://vizola.ru/click.php?lp=1" class="Header-module-item Header-module-itemLang"
+            </svg></button><a href="https://vizola.ru/click?lp=1" class="Header-module-item Header-module-itemLang"
             __cporiginalvalueof="">EN</a><button class="Header-module-item Header-module-itemAuth" type="button"
             aria-label="Авторизация">Войти</button>
         </div>
@@ -713,8 +713,8 @@
             <p class="kardineoN2Com__name">Михаил Зайцев</p>
             <p class="kardineoN2Com__comment">Ух ты, к такому доктору я бы пошел!...</p>
             <div class="kardineoN2Com__like">
-              <a href="https://vizola.ru/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="https://vizola.ru/click.php?lp=1">5</a>
+              <a href="https://vizola.ru/click?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.ru/click?lp=1">5</a>
             </div>
           </div>
         </div>
@@ -729,8 +729,8 @@
             <p class="kardineoN2Com__comment">Грамотная девушка, все по полочкам, все понятно. От виагры действительно
               больше проблем чем пользы. Буду пробовать Хуан Хун.</p>
             <div class="kardineoN2Com__like">
-              <a href="https://vizola.ru/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="https://vizola.ru/click.php?lp=1">8</a>
+              <a href="https://vizola.ru/click?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.ru/click?lp=1">8</a>
             </div>
           </div>
         </div>
@@ -756,8 +756,8 @@
                 style="width: calc(50% - 4px); flex: 0 0 calc(50% - 4px); border-radius: 8px" src="assets/comm2.jpg">
             </div>
             <div class="kardineoN2Com__like">
-              <a href="https://vizola.ru/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="https://vizola.ru/click.php?lp=1">16</a>
+              <a href="https://vizola.ru/click?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.ru/click?lp=1">16</a>
             </div>
           </div>
         </div>
@@ -775,8 +775,8 @@
               не было ))
             </p>
             <div class="kardineoN2Com__like">
-              <a href="https://vizola.ru/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="https://vizola.ru/click.php?lp=1">12</a>
+              <a href="https://vizola.ru/click?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.ru/click?lp=1">12</a>
             </div>
           </div>
         </div>
@@ -791,8 +791,8 @@
             <p class="kardineoN2Com__comment">Эх были бы такие доктора у нас в поликлиниках. Эта девушка наверняка в
               частной клинике дорогущей работает, куда простому смертному не попасть.</p>
             <div class="kardineoN2Com__like">
-              <a href="https://vizola.ru/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="https://vizola.ru/click.php?lp=1">14</a>
+              <a href="https://vizola.ru/click?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.ru/click?lp=1">14</a>
             </div>
           </div>
         </div>
@@ -810,8 +810,8 @@
               рассталась.
             </p>
             <div class="kardineoN2Com__like">
-              <a href="https://vizola.ru/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="https://vizola.ru/click.php?lp=1">12</a>
+              <a href="https://vizola.ru/click?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.ru/click?lp=1">12</a>
             </div>
           </div>
         </div>
@@ -834,8 +834,8 @@
                 style="width: 100%; border-radius: 8px" src="assets/comm3.jpg">
             </div>
             <div class="kardineoN2Com__like">
-              <a href="https://vizola.ru/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="https://vizola.ru/click.php?lp=1">15</a>
+              <a href="https://vizola.ru/click?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.ru/click?lp=1">15</a>
             </div>
           </div>
         </div>
@@ -850,8 +850,8 @@
             <p class="kardineoN2Com__comment">Илья, что это у вас за работа, на которой вы сидите скучаете? Вас надо на
               стройку к нам, там некогда скучать.</p>
             <div class="kardineoN2Com__like">
-              <a href="https://vizola.ru/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="https://vizola.ru/click.php?lp=1">5</a>
+              <a href="https://vizola.ru/click?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.ru/click?lp=1">5</a>
             </div>
           </div>
         </div>
@@ -865,8 +865,8 @@
             <p class="kardineoN2Com__name">Ксения Дубровкина</p>
             <p class="kardineoN2Com__comment">Как много симпатичных мужчин в комментариях! Жаль что все импотенты(</p>
             <div class="kardineoN2Com__like">
-              <a href="https://vizola.ru/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="https://vizola.ru/click.php?lp=1">1</a>
+              <a href="https://vizola.ru/click?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.ru/click?lp=1">1</a>
             </div>
           </div>
         </div>
@@ -881,8 +881,8 @@
             <p class="kardineoN2Com__comment">Ксения, пройдем курс Хуан Хун и все нормально будет с потенцией. Так что
               выбирай любого себе тут.</p>
             <div class="kardineoN2Com__like">
-              <a href="https://vizola.ru/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="https://vizola.ru/click.php?lp=1">3</a>
+              <a href="https://vizola.ru/click?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.ru/click?lp=1">3</a>
             </div>
           </div>
         </div>
@@ -906,8 +906,8 @@
                 style="width: 100%; border-radius: 8px" src="assets/comm4.jpg">
             </div>
             <div class="kardineoN2Com__like">
-              <a href="https://vizola.ru/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="https://vizola.ru/click.php?lp=1">8</a>
+              <a href="https://vizola.ru/click?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.ru/click?lp=1">8</a>
             </div>
           </div>
         </div>
@@ -921,8 +921,8 @@
             <p class="kardineoN2Com__name">Ольга Токарева</p>
             <p class="kardineoN2Com__comment">Заказала мужу, спасибо.</p>
             <div class="kardineoN2Com__like">
-              <a href="https://vizola.ru/click.php?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
-              <a href="https://vizola.ru/click.php?lp=1">3</a>
+              <a href="https://vizola.ru/click?lp=1"><img alt="img" src="assets/like.svg" width="20"></a>
+              <a href="https://vizola.ru/click?lp=1">3</a>
             </div>
           </div>
         </div>
@@ -1000,7 +1000,7 @@
       }
     }
   </style>
-  <a href="https://vizola.ru/click.php?lp=1" class="sticky-bottom-btn" id="stickyActionBtn">
+  <a href="https://vizola.ru/click?lp=1" class="sticky-bottom-btn" id="stickyActionBtn">
     <div>🔥 Акция от производителя! Осталось:</div>
     <span class="timer" id="stickyActionTimer">17:47</span>
   </a>
